test/function/missing_arguments.lox
fn f(a, b) {}

f(1) // error: expected 2 arguments but got 1
